--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 </figure>
                 <figure class="section3boxes" id ="text-feature" >
                     <h4>Feature Section Heading</h4>
-               <textarea>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tempor, arcu et porta dictum,
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tempor, arcu et porta dictum,
                 est justo tincidunt massa, nec vestibulum libero dolor sit amet erat. 
                 Nunc non viverra justo. Pellentesque vitae nisi sit amet nisl posuere scelerisque id vel ex. 
                 Nam non pellentesque ante, sed interdum dolor. Morbi nec dignissim velit. Aliquam erat volutpat.
                  Vivamus posuere facilisis nisi, eu eleifend risus molestie at. 
-                 Ut quis ex id justo sagittis posuere.</textarea>
+                 Ut quis ex id justo sagittis posuere.</p>
                 <div id ="button-container"></div>
                     <button>Call To Action</button>
                </div>
