--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
              </figure>
             
             </section>
-            <section>
+            <section class="textimg" > 
                 <figure class="section3boxes">
                     <img src="https://placehold.it/480x400/000">
                 </figure>
